<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".NewTicket"
    tools:ignore="MissingConstraints">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo_content_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/contact_us_text"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:gravity="start|center_vertical"
        android:text="@string/fixit_address"
        android:textSize="20sp" />

    <TextView
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        app:drawableStartCompat="@drawable/ic_mail"
        android:gravity="start|center_vertical"
        android:text="@string/fixit_email"
        android:textSize="18sp" />

    <TextView
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        app:drawableStartCompat="@drawable/ic_phone"
        android:gravity="start|center_vertical"
        android:text="@string/fixit_phone"
        android:textSize="18sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_view"
            android:fontFamily="sans-serif-black"
            android:text="@string/back_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
</LinearLayout>