<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".SignUp"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_logo_content_description"
        tools:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Name"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_name"
        android:gravity="center"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        android:padding="20dp" />

    <EditText
        android:id="@+id/textNumber"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Phone Number"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_phone"
        android:gravity="center"
        android:hint="@string/phone_number_text"
        android:inputType="number"
        android:padding="20dp" />

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="E-mail"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_mail"
        android:gravity="center"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/textPass"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Password"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="center"
        android:hint="@string/password_text"
        android:inputType="numberPassword"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_view"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="380sp"
        android:layout_height="4dp"
        android:layout_marginBottom="10dp"
        android:background="@color/separator" />

    <Button
        android:id="@+id/btnGotoLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_view"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>