<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login"
    tools:ignore="MissingConstraints">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo_content_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_prompt_text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="E-mail"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_mail"
        android:gravity="center"
        android:hint="@string/enter_email_text"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="380sp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Password"
        android:background="@drawable/edit_text_box"
        android:drawableStart="@drawable/ic_lock"
        android:gravity="center"
        android:hint="@string/enter_password_text"
        android:inputType="numberPassword"
        android:padding="20dp" />


    <Button
        android:id="@+id/btnSubmitLogin"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_view"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="380sp"
        android:layout_height="4dp"
        android:layout_marginBottom="10dp"
        android:background="@color/separator" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_view"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/create_account_text"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>