<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="MissingConstraints"
    tools:context=".MainActivity">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo_content_description" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textSize="60sp" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:background="@drawable/btn_view"
            android:textSize="30sp" />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:background="@drawable/btn_view"
            android:textSize="30sp" />
</LinearLayout>